--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/nptu-cnc/nptu-cnc.github.io#readme",
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
+    "jquery": "^3.6.1",
     "vue": "^3.2.40",
     "vue-router": "^4.1.5"
   },
