--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
-  "name": "dist",
+  "name": "nptucnc",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "keywords": [],
+  "author": "MX,Du",
+  "description": "",
+  "scripts": {
+    "start": "vuepress dev docs",
+    "build": "vuepress build docs",
+    "deploy": "gh-pages -d build"
+  },
   "devDependencies": {
     "vuepress": "^2.0.0-beta.53"
   },
@@ -47,6 +55,7 @@
     "fs-extra": "^10.1.0",
     "function-bind": "^1.1.1",
     "get-stream": "^6.0.1",
+    "gh-pages": "^4.0.0",
     "glob-parent": "^5.1.2",
     "globby": "^13.1.2",
     "graceful-fs": "^4.2.10",
@@ -140,12 +149,5 @@
     "wcwidth": "^1.0.1",
     "which": "^2.0.2",
     "yaml": "^2.1.3"
-  },
-  "scripts": {
-    "dev": "vuepress dev docs",
-    "build": "vuepress build docs"
-  },
-  "keywords": [],
-  "author": "",
-  "description": ""
+  }
 }
